<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.mustafa.sayed.fitness.favorite"
    android:orientation="vertical"
    android:background="@drawable/ss">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="النتائج"
        android:textColor="#4b0703"
        android:textSize="25dp"
        android:gravity="center"/>
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="350dp">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/showdatafood"
        android:textColor="#4b0703"
        android:textSize="15dp"

        />
</ScrollView>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <EditText
            android:layout_width="110dp"
            android:layout_height="50dp"
            android:id="@+id/edit_id"
            android:hint="@string/id"
            />
        <EditText
            android:layout_width="110dp"
            android:layout_height="50dp"
            android:id="@+id/edit_type"
            android:layout_marginLeft="20dp"
            android:hint="@string/type"
            android:layout_toRightOf="@+id/edit_id"/>
        <EditText
            android:layout_width="110dp"
            android:layout_height="50dp"
            android:id="@+id/edit_nocolor"
            android:hint="@string/nocolor"
            android:layout_alignParentRight="true"/>
        <Button
            android:layout_width="150dp"
            android:layout_height="60dp"
            android:onClick="modify"
            android:layout_below="@+id/edit_id"
            android:text="@string/modify"
            android:layout_marginLeft="20dp"
            android:background="@drawable/backgroundfront"
            android:layout_marginTop="10dp"
            />
        <Button
            android:layout_width="150dp"
            android:layout_height="60dp"
            android:onClick="delete"
            android:layout_below="@+id/edit_nocolor"
            android:text="@string/delete"
            android:layout_alignParentRight="true"
            android:layout_marginRight="20dp"
            android:background="@drawable/backgroundfront"
            android:layout_marginTop="10dp"
            />
    </RelativeLayout>
</LinearLayout>
