<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.mustafa.sayed.fitness.MainActivity"
    android:orientation="vertical"
    android:background="@drawable/ss"
    android:gravity="center"

    >

    <TextView
        android:id="@+id/textView"
        android:layout_width="295dp"
        android:layout_height="70dp"
        android:background="@drawable/title"
        android:gravity="center"
        android:layout_marginTop="10dp"
        android:text="FITNESS"
        android:textColor="#020a41"
        android:textSize="50dp"
        android:layout_marginBottom="7dp"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="370dp"
        android:orientation="horizontal"
        >


        <ImageView
            android:id="@+id/imageView"
            android:layout_width="190dp"
            android:layout_height="370dp"
            android:src="@drawable/bodybuilding"
            android:layout_marginRight="0dp"/>

        <LinearLayout
            android:layout_width="171dp"
            android:layout_height="370dp"
            android:gravity="center"
            android:orientation="vertical">

            <Button
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="30dp"
                android:background="@drawable/backgroundfront"
                android:onClick="exercies"
                android:text="@string/exer"
                android:textAppearance="?android:textAppearanceLarge" />

            <Button
                android:id="@+id/button6"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="15dp"
                android:background="@drawable/backgroundfront"
                android:onClick="food"
                android:text="@string/calories"
                android:textAppearance="?android:textAppearanceLarge" />

            <Button
                android:layout_width="100dp"
                android:layout_height="wrap_content"

                android:layout_marginBottom="15dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="15dp"
                android:background="@drawable/backgroundfront"
                android:onClick="Device"
                android:text="@string/divice"
                android:textAppearance="?android:textAppearanceLarge" />

            <Button
                android:id="@+id/button"
                android:layout_width="130dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="15dp"
                android:background="@drawable/backgroundfront"
                android:onClick="resulttable"
                android:text="@string/result"
                android:textAppearance="?android:textAppearanceLarge" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center"
        android:orientation="horizontal"
        >

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:onClick="shareApp"
            android:src="@drawable/share" />

        <ImageView
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:onClick="sendEmail"
            android:src="@drawable/mail5" />

        <ImageView
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:onClick="outApp"
            android:src="@drawable/out" />
    </LinearLayout>



</LinearLayout>
